--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 
 
 group = 'com.dominiccobo.fyp'
-version = '0.1.0'
+version = versionDetails().lastTag
 sourceCompatibility = '1.8'
 targetCompatibility = 1.8
 
